worked on the explore page visual  fixed the header position that previously aligned with cards add flex-basis: 100% to card container header Header now properly separates from card grid in flex-wrap layout

--- a/explore.css
+++ b/explore.css
@@ -6,15 +6,37 @@
 body{
     min-height:100vh;
     background: linear-gradient(to right, hsla(331, 98%, 49%, 0.659), #f8027972);
+    padding:20px;
+ 
 }
+
 .container{
 max-width:1200px;
-width:100%;
-justify-content: center;
+margin: 0 auto;
+
 }
 .card-container{
-    max-width:1200px;
-    display:flex;
-    flex:wrap;
 
+    display:flex;
+    flex-wrap:wrap;
+    gap:20px;
+    margin-top:30px;
+    
+    
+
+    
+
+}
+.card {
+    display:flex;
+    flex-direction:column;
+    min-height:280px;
+    border-radius:15px;
+    border:2px solid grey;
+    max-width:380px;
+
+}
+.card-container header{
+    margin-bottom:4px;
+    flex-basis:100%;
 }
